<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="238dp"
        android:layout_height="23dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="87dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/complete_los_campos_requeridos"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageButton
        android:id="@+id/back_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#f4f4f4"
        android:tint="#1A237E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="118dp"
        android:layout_height="22dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="147dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/especificaciones"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="118dp"
        android:layout_height="22dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="149dp"
        android:text="@string/app"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="118dp"
        android:layout_height="22dp"
        android:layout_marginEnd="149dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/mockup"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/continuar_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#01579B"
        android:text="@string/continuar"
        android:textColor="#F4F6F6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/capacidadId"
        android:layout_width="202dp"
        android:layout_height="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="262dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/capacidad"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="231dp"
        android:layout_height="19dp"
        android:layout_marginStart="36dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/contenido_neto"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capacidadId" />

    <Spinner
        android:id="@+id/spinnermedida_"
        android:layout_width="55dp"
        android:layout_height="24dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="72dp"
        android:layout_height="22dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="1dp"
        android:text="@string/medida"
        app:layout_constraintEnd_toStartOf="@+id/spinnermedida_"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="344dp"
        android:layout_height="182dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/continuar_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cervezaRoja"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:fontFamily="sans-serif"
            android:text="Cerveza Roja"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cervesaNegra"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="Cerveza Negra" />

        <Button
            android:id="@+id/cervezaRubia"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="Cerveza Rubia" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="160dp"
        android:backgroundTint="#1A237E"
        android:buttonTint="#1A237E"
        android:checked="false"
        android:clickable="false"
        android:textColorHighlight="#1A237E"
        android:textColorLink="#1A237E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#1A237E"
        android:buttonTint="#1A237E"
        android:checked="false"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/checkBox2"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#1A237E"
        android:buttonTint="#1A237E"
        android:checked="false"
        android:clickable="false"
        app:layout_constraintBottom_toTopOf="@+id/checkBox3"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>