<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/enviarID"
        android:layout_width="410dp"
        android:layout_height="37dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/noEnviarID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="no"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/siEnviarID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:text="si"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imagenEnviarID"
            android:layout_width="65dp"
            android:layout_height="38dp"
            android:layout_marginStart="112dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_set_as" />

        <TextView
            android:id="@+id/textEnviarID"
            android:layout_width="110dp"
            android:layout_height="38dp"
            android:gravity="center"
            android:text="Desea enviar los datos de su compra"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/guardarID"
        android:layout_width="411dp"
        android:layout_height="38dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="110dp"
            android:layout_height="38dp"
            android:gravity="center"
            android:text="Desea Guardar su compra"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ImagenGuardadoID"
            android:layout_width="65dp"
            android:layout_height="38dp"
            android:layout_marginStart="112dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_save" />

        <Button
            android:id="@+id/siID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="si"
            android:textSize="10sp"
            app:layout_constraintEnd_toStartOf="@+id/noID"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/noID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="no"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menuID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/clipView2"
            android:layout_width="47dp"
            android:layout_height="42dp"
            android:layout_marginBottom="116dp"
            android:background="#00932828"
            android:backgroundTint="#283593"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/clipView"
            app:srcCompat="@android:drawable/ic_menu_send" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="303dp"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="54dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/revise_la_informaci_n_brindada_por_favor"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <ImageButton
            android:id="@+id/back_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#f4f4f4"
            android:tint="#1A237E"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="224dp"
            android:layout_height="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="94dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/resumen_de_solicitud"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="118dp"
            android:layout_height="22dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="149dp"
            android:text="@string/app"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="118dp"
            android:layout_height="22dp"
            android:layout_marginEnd="149dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/mockup"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="157dp"
            android:layout_height="28dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/solicitud_de_un_una"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="157dp"
            android:layout_height="28dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/capacidad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="157dp"
            android:layout_height="28dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/grado_alimenticio"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="157dp"
            android:layout_height="28dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/tapa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="157dp"
            android:layout_height="28dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/grafica"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="157dp"
            android:layout_height="28dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/disponibilidad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="157dp"
            android:layout_height="28dp"
            android:layout_marginStart="54dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/tipologia"
            app:layout_constraintEnd_toEndOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText5" />

        <ImageView
            android:id="@+id/clipView"
            android:layout_width="47dp"
            android:layout_height="42dp"
            android:layout_marginStart="54dp"
            android:layout_marginBottom="116dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/clip" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="54dp"
            android:clickable="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Texto"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/editText14"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="54dp"
            android:clickable="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Texto"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/editText15"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="236dp"
            android:layout_marginEnd="54dp"
            android:clickable="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Texto"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/editText16"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="192dp"
            android:layout_marginEnd="54dp"
            android:clickable="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Texto"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/editText17"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:layout_marginEnd="54dp"
            android:clickable="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Texto"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/textViewCantidad"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="54dp"
            android:clickable="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="100 ml"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/editText19"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="54dp"
            android:clickable="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Texto"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/editText12"
            android:layout_width="303dp"
            android:layout_height="49dp"
            android:layout_marginStart="54dp"
            android:backgroundTint="#283593"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textColor="#283593"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/clipView2"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Comentarios..." />

        <Button
            android:id="@+id/validar_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginBottom="59dp"
            android:backgroundTint="#01579B"
            android:text="Validar"
            android:textColor="#F4F6F6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>