<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main4Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/button"
            android:layout_width="350dp"
            android:layout_height="309dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="19dp"
            android:background="#06AA95"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="303dp"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="54dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/deadline_que_usted_necesita_el_producto"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <ImageButton
            android:id="@+id/back_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#f4f4f4"
            android:tint="#1A237E"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="224dp"
            android:layout_height="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="94dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/disponibilidad"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="149dp"
            android:text="@string/app"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="149dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/mockup"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/editText4"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="28dp"
            android:clickable="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Pedido convencional"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/editText6"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="28dp"
            android:clickable="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Pedido con urgencia"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:fontFamily="sans-serif-light"
            android:text="Disponible en 7, 15 o 30 dìas habiles"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText4" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="1dp"
            android:fontFamily="sans-serif-light"
            android:text="Disponible en 48hs"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText6" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="53dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Switch
            android:id="@+id/switch4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText4" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-black"
            android:text="Primera fecha "
            app:layout_constraintBottom_toTopOf="@+id/ImagenCalendario"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="de entrega"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/ImagenCalendario"
            app:layout_constraintStart_toEndOf="@+id/textView20" />

        <CalendarView
            android:id="@+id/ImagenCalendario"
            android:layout_width="233dp"
            android:layout_height="214dp"
            android:layout_marginEnd="89dp"
            android:layout_marginBottom="66dp"
            android:background="#F4F6F6"
            android:backgroundTint="#F4F6F6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>